[gd_scene load_steps=2 format=3 uid="uid://bvga1qkm61jg7"]

[ext_resource type="Script" uid="uid://dhn6rsdfaicak" path="res://scripts/OptionsMenu.gd" id="1_mtmwl"]

[node name="OptionsMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mtmwl")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.2)

[node name="OptionsPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(600, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionsMargin" type="MarginContainer" parent="OptionsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="OptionsContainer" type="VBoxContainer" parent="OptionsPanel/OptionsMargin"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleContainer" type="VBoxContainer" parent="OptionsPanel/OptionsMargin/OptionsContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="OptionsTitle" type="Label" parent="OptionsPanel/OptionsMargin/OptionsContainer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_font_sizes/font_size = 28
text = "‚öôÔ∏è OPCIONES"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="OptionsPanel/OptionsMargin/OptionsContainer/TitleContainer"]
layout_mode = 2

[node name="SettingsContainer" type="VBoxContainer" parent="OptionsPanel/OptionsMargin/OptionsContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="AudioSection" type="VBoxContainer" parent="OptionsPanel/OptionsMargin/OptionsContainer/SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="AudioLabel" type="Label" parent="OptionsPanel/OptionsMargin/OptionsContainer/SettingsContainer/AudioSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "üîä Audio"

[node name="Master" type="HBoxContainer" parent="OptionsPanel/OptionsMargin/OptionsContainer/SettingsContainer/AudioSection"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="OptionsPanel/OptionsMargin/OptionsContainer/SettingsContainer/AudioSection/Master"]
layout_mode = 2
text = "Volumen Maestro:"

[node name="HSlider" type="HSlider" parent="OptionsPanel/OptionsMargin/OptionsContainer/SettingsContainer/AudioSection/Master"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="Label2" type="Label" parent="OptionsPanel/OptionsMargin/OptionsContainer/SettingsContainer/AudioSection/Master"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "100%"

[node name="VideoSection" type="VBoxContainer" parent="OptionsPanel/OptionsMargin/OptionsContainer/SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="VideoLabel" type="Label" parent="OptionsPanel/OptionsMargin/OptionsContainer/SettingsContainer/VideoSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "üñ•Ô∏è Video"

[node name="ResolutionContainer" type="HBoxContainer" parent="OptionsPanel/OptionsMargin/OptionsContainer/SettingsContainer/VideoSection"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="OptionsPanel/OptionsMargin/OptionsContainer/SettingsContainer/VideoSection/ResolutionContainer"]
layout_mode = 2
text = "Resoluci√≥n:"

[node name="ResolutionOption" type="OptionButton" parent="OptionsPanel/OptionsMargin/OptionsContainer/SettingsContainer/VideoSection/ResolutionContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18

[node name="FullscreenContainer" type="HBoxContainer" parent="OptionsPanel/OptionsMargin/OptionsContainer/SettingsContainer/VideoSection"]
layout_mode = 2

[node name="Label" type="Label" parent="OptionsPanel/OptionsMargin/OptionsContainer/SettingsContainer/VideoSection/FullscreenContainer"]
layout_mode = 2
text = "Pantalla Completa:"

[node name="FullscreenCheck" type="CheckButton" parent="OptionsPanel/OptionsMargin/OptionsContainer/SettingsContainer/VideoSection/FullscreenContainer"]
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="OptionsPanel/OptionsMargin/OptionsContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 15

[node name="ApplyButton" type="Button" parent="OptionsPanel/OptionsMargin/OptionsContainer/ButtonsContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "‚úÖ Aplicar"

[node name="ResetButton" type="Button" parent="OptionsPanel/OptionsMargin/OptionsContainer/ButtonsContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "üîÑ Restablecer"

[node name="CloseButton" type="Button" parent="OptionsPanel/OptionsMargin/OptionsContainer/ButtonsContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "‚ùå Cerrar"
